suppression layer 5 calcul

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -368,7 +368,7 @@
     "####################################\n",
     "N_img = 1000\n",
     "k_neurons = 100\n",
-    "layers = [5] #[5,6,7,8,9,10]\n",
+    "layers = [6,7,8,9,10]\n",
     "###################################\n",
     "\n",
     "spectral_neurons= np.arange(k_neurons,dtype=int)\n",
